# Lavalink-rust

./: .gitignore  Cargo.toml  FEATURE_COMPARISON.md  GITHUB_ACTIONS_OPTIMIZATION.md  MIGRATION.md  MIGRATION_GUIDE.md  MIGRATION_REPORT.md  NIX_README.md  PRODUCTION_MIGRATION_PLAN.md  PROGRESS.md  README.md  YOUTUBE_PLUGIN.md  application.yml  build.rs  clippy_output.txt  config.yml  flake.nix  mkdocs.yml  performance-results.md  progress.md  test-application.yml
.cargo/: audit.toml
.github/workflows/: build.yml  docs.yml  pr.yml  release.yml  security.yml  youtube-plugin.yml
backup/: performance-baseline.md
config/: discord-e2e-test.yml
deployment/: Dockerfile  Dockerfile.alpine  README-TESTING.md  docker-compose.yml  run-all-tests.sh  test-deployment.sh  test-docker.sh  test-integration.sh
deployment/docs/: OPERATIONS_GUIDE.md  ROLLBACK_PROCEDURES.md  TEAM_TRAINING_GUIDE.md
deployment/monitoring/: lavalink_rules.yml  prometheus.yml
deployment/monitoring/grafana/provisioning/dashboards/: dashboard.yml
deployment/scripts/: deploy.sh  rollback.sh
deployment/systemd/: lavalink-rust.service
docker/: Dockerfile.arm-cross
docs/: CODE_VALIDATION.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_REVIEW.md  README.md  STATS_IMPLEMENTATION.md  STRUCTURE_REVIEW.md  TESTING_CHECKLIST.md  arm-iot-support.md  index.md  mkdocs.yml  requirements.txt  youtube-source-plugin-external-build.md
docs/advanced/: docker-deployment.md  fallback-system.md  operations.md  performance.md
docs/api/: Insomnia.json  rest.md  websocket.md
docs/assets/css/: extra.css
docs/configuration/: filters.md  index.md  monitoring.md  performance.md  sources.md
docs/getting-started/: binary.md  docker.md  faq.md  systemd.md  troubleshooting.md
docs/migration/: from-java.md
docs/plugins/: development.md
docs/testing/: discord-e2e-tests.md
example_dynamic_plugin/: Cargo.toml
example_dynamic_plugin/src/: lib.rs
examples/: custom_plugin.rs  plugin_usage.rs  stats_demo.rs
nix/: docker.nix  module.nix  test-nix.sh
nix/configurations/: development.nix  production.nix
nix/deploy/: default.nix  deploy.sh
nix/tests/: default.nix
scripts/: build-arm.sh  clone-youtube-plugin.sh  run-discord-e2e-tests.sh
src/: lib.rs  main.rs  test_utils.rs
src/audio/: arm_backend.rs  filter_tests.rs  filters.rs  integration_tests.rs  mod.rs  quality.rs  streaming.rs  tests.rs
src/audio/sources/: bandcamp.rs  enhanced_http.rs  http_content_detection.rs  local.rs  mod.rs  soundcloud.rs
src/config/: mod.rs
src/player/: engine.rs  mod.rs
src/plugin/: interface.rs  loader.rs  mod.rs
src/protocol/: filters.rs  info.rs  messages.rs  mod.rs  player.rs  session.rs  tests.rs
src/server/: auth.rs  mod.rs  rest.rs  rest_tests.rs  routeplanner.rs  stats.rs  tests.rs  websocket.rs
src/server/routeplanner/: tests.rs
src/voice/: connection.rs  discord.rs  integration_tests.rs  koe.rs  koe_config.rs  logging.rs  mod.rs  monitoring.rs  pool.rs  recovery_tests.rs  voice_connection_tests.rs
tests/: audio_quality_performance_tests.rs  discord_e2e_tests.rs  integration_tests.rs  java_compatibility_tests.rs  performance_tests.rs  player_tests.rs  plugin_integration_tests.rs  plugin_tests.rs  plugin_tests.rs.bak
