[package]
name = "lavalink-rust"
version = "4.0.0"
edition = "2021"
authors = ["Lavalink Rust Contributors"]
description = "A standalone audio sending node for Discord, written in Rust"
license = "MIT"
repository = "https://github.com/lavalink-devs/lavalink-rust"
keywords = ["discord", "audio", "music", "bot", "voice"]
categories = ["multimedia::audio", "network-programming", "web-programming"]

[dependencies]
# Core async runtime and web framework
tokio = { version = "1.45", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower = { version = "0.5", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "compression-gzip"] }
hyper = { version = "1.6", features = ["full"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Configuration management
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Audio processing and Discord integration
songbird = { version = "0.5", features = ["builtin-queue"], default-features = false }
serenity = { version = "0.12", default-features = false, features = ["voice", "gateway", "rustls_backend"] }

# Audio decoding and processing (simplified for cross-platform compatibility)
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "vorbis", "wav"] }
rubato = "0.14"

# HTTP client for audio sources
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Async utilities
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cryptography (replacing ring)
aws-lc-rs = "1.13"
curve25519-dalek = "4.1"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }

# Plugin system
libloading = "0.8"
libc = "0.2"

# Metrics and monitoring
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false, features = ["http-listener", "hyper-rustls"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
once_cell = "1.21"
num_cpus = "1.16"
base64 = "0.22"
url = "2.5"
regex = "1.11"
rand = "0.9"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
wiremock = "0.6"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.14"
assert_matches = "1.5"
axum-test = "15.0"

# Build optimization profiles
[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
# Optimized for performance and size
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.test]
# Optimized for test performance
opt-level = 1
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.bench]
# Optimized for benchmarking
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = false
codegen-units = 1
